--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import 'font.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
-*{
+* {
   padding: 0;
   margin: 0;
 }
@@ -10,7 +10,6 @@
 ul li {
   display: block;
 }
-
 
 /* NAV */
 .menu-bar {
@@ -31,7 +30,7 @@ ul li {
   color: #00897b;
 }
 /* HEADER */
-.header{
+.header {
   position: relative;
   text-align: center;
   color: white;
@@ -41,7 +40,8 @@ ul li {
   padding-top: 180px;
   padding-bottom: 180px;
 }
-span {
+.arrow1,
+.arrow2 {
   display: block;
   position: absolute;
   content: '';
@@ -78,7 +78,8 @@ span {
   border: 2px solid white;
   color: white;
 }
-.button:hover, .focused {
+.button:hover,
+.focused {
   border-color: #00897b;
   background-color: #00897b;
   color: white;
@@ -127,7 +128,7 @@ span {
 }
 .infocard:hover {
   color: white;
-  box-shadow: 0px 10px 12px -0px rgba(0, 0, 0, 0.3) ;
+  box-shadow: 0px 10px 12px -0px rgba(0, 0, 0, 0.3);
   background-color: #00897b;
 }
 .infocard:hover > .icon {
@@ -143,13 +144,13 @@ span {
   margin: 0 auto;
 }
 /* на кнопки для портфолио добавляем класс .focused, чтобы в js сделать подсветку после нажатия */
-.button_black{
+.button_black {
   font-family: 'OpenSans-Semibold';
   border: 2px solid rgb(3, 3, 3);
   color: rgb(3, 3, 3);
   transition: 0.3s;
 }
-.infocard:hover .button_black{
+.infocard:hover .button_black {
   border: 2px solid white;
   color: white;
   cursor: pointer;
@@ -161,33 +162,36 @@ span {
   color: #212121;
   text-align: center;
 }
-.portfolio .button{
-  border: 2px solid #00897b
+.portfolio .button {
+  border: 2px solid #00897b;
 }
-.portfolio img{
+.portfolio img {
   position: relative;
   margin-bottom: 30px;
 }
-.filter{
+.filter {
   padding: 120px 0;
 }
-.show > div{
+.show > div {
   display: none;
   padding: 120px 0;
   justify-content: center;
 }
-.text{
+.text {
   display: none;
 }
-div[focus]:hover img, div[filter]:hover img{
+div[focus]:hover img,
+div[filter]:hover img {
   /* затемнение карттинки на 50% */
   filter: brightness(50%);
   transition: 0.3s;
 }
-div[focus], div[filter]{
+div[focus],
+div[filter] {
   position: relative;
 }
-div[focus]:hover .text, div[filter]:hover .text{
+div[focus]:hover .text,
+div[filter]:hover .text {
   display: block;
   position: absolute;
   width: 100%;
@@ -197,61 +201,238 @@ div[focus]:hover .text, div[filter]:hover .text{
   left: 0;
   z-index: 3;
 }
- /* PRICE */
+/* PRICE */
 .price {
   padding-top: 130px;
   padding-bottom: 120px;
   color: #212121;
   background-color: #f0f1f1;
   text-align: center;
- }
- .pricecard{
+}
+.pricecard {
   background-color: white;
   padding-bottom: 65px;
- }
- .pricecard:hover{
+  transition: 0.3s;
+}
+.pricecard:hover {
   box-shadow: 0 10px 10px 0 rgba(128, 128, 128, 0.443);
- }
- .pricecard__head{
-   padding-top: 50px;
-   padding-bottom: 65px;
+}
+
+.button:hover {
+  padding: 10px 19px;
+  text-transform: uppercase;
+}
+.pricecard__head {
+  padding-top: 50px;
+  padding-bottom: 65px;
   background-image: url(../img/pricing_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 212px;
   font-family: 'OpenSans-Regular';
   color: white;
- }
- .pricecard__head p{
+}
+.pricecard__head p {
   font-size: 25px;
- }
- .pricecard__head{
+}
+.pricecard__head {
   font-size: 50px;
- }
- .pricecard__head sub{
+}
+.pricecard__head sub {
   vertical-align: middle;
   font-size: 17px;
- }
- .pricecard__head sup{
+}
+.pricecard__head sup {
   vertical-align: middle;
   font-size: 30px;
   /* убрать пробел между $ и цыфрой */
-  letter-spacing: -.36em;
- }
- .pricecard__body{
+  letter-spacing: -0.36em;
+}
+.pricecard__body {
   font-family: 'OpenSans-Light';
   font-size: 17px;
   color: #212121;
- }
- .pricecard__body p{
+}
+.pricecard__body p {
   padding-left: -2rem;
   margin: 0 auto;
   padding-bottom: 15px;
   padding-top: 40px;
   border-bottom: 1px solid #bfbfbf;
   max-width: 178px;
- }
- .pricecard__body p:last-child{
+}
+.pricecard__body p:last-child {
   margin-bottom: 65px;
- }
- 
+}
+/* TEAM */
+.team {
+  padding-top: 125px;
+  padding-bottom: 120px;
+  color: #212121;
+  text-align: center;
+}
+.team .team__text {
+  margin-bottom: 20px;
+}
+.icons {
+  /* убрали тире между иконками */
+  display: flex;
+  justify-content: center;
+}
+.icons a i {
+  transition: 0.3s;
+}
+/* для первого тега i (отвечает за цвет иконки) */
+.icons i:nth-child(1) {
+  color: #f0f1f1;
+}
+.icons a:hover i:nth-child(1) {
+  color: #3949ab;
+}
+.icons i:nth-child(2) {
+  color: #00897b;
+}
+.icons a:hover i:nth-child(2) {
+  color: white;
+}
+/* выравниваем слайд по центру, и немного увеличиваем фото, чтоб все фото стали равномерно */
+.team img {
+  margin: 0 auto;
+  width: 340px;
+}
+.dots-style {
+  padding-top: 120px;
+  display: flex;
+  justify-content: center;
+}
+/* рисуем точки */
+.dots-style button {
+  background-color: #00897b;
+  border: none;
+  /* кружек */
+  border-radius: 50%;
+  /*убираем цифры  */
+  font-size: 0;
+  width: 10px;
+  height: 10px;
+  margin: 5px;
+}
+/* делаем другой цвет точки активного слайда. Для кнопки отслеживаем класс slick-active(он появляетс при нажатии на кружек) */
+.dots-style li[class='slick-active'] button {
+  background-color: #3949ab;
+}
+/* BLOG */
+.blog {
+  padding-top: 130px;
+  padding-bottom: 125px;
+  color: #212121;
+  background-color: #e4fdf9;
+  text-align: center;
+}
+/* задаем отзеркаливание строк. Первая строка с классом .left:  для первого div внутри.left пеложение 1,т.е. слева, для последнего-положение 2,т.е. сразу после первого. Вторая строка с классом .right:  для первого div внутри.right пеложение 2,т.е. справа, для последнего-положение 1,т.е. перед первым*/
+.left > div:first-child {
+  order: 1;
+}
+.left > div:last-child {
+  order: 2;
+}
+.right > div:first-child {
+  order: 2;
+}
+.right > div:last-child {
+  order: 1;
+}
+.blog__text {
+  padding: 60px 30px 0;
+  text-align: left;
+}
+.blog__text a {
+  text-decoration: none;
+  color: #212121;
+  font-size: 25px;
+}
+.blog__text i {
+  margin-right: 15px;
+}
+.blog__text a:hover {
+  color: #00897b;
+}
+.blog__text div {
+  margin: 30px 0;
+  font-family: 'OpenSans-Bold';
+}
+.content {
+  margin-bottom: 125px;
+}
+.blog__text div span {
+  margin-right: 40px;
+}
+.left,
+.right {
+  margin: 0 -40px;
+}
+/* FOOTER */
+.footer {
+  padding-top: 125px;
+  padding-bottom: 110px;
+  color: white;
+  background-image: url(../img/footer.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+.fa-location-dot,
+.fa-phone,
+.fa-envelope {
+  font-size: 62px;
+  color: white;
+}
+.circle {
+  margin: 0 auto 35px;
+  background-color: #3949ab;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.circle + p {
+  font-size: 20px;
+  margin-bottom: 80px;
+}
+.footer input,
+.footer textarea{
+  padding: 35px 20px;
+  width: 100%;
+  border-radius: 15px;
+  border: none;
+  font-size: 20px;
+}
+.footer input:focus,
+.footer textarea:focus{
+  outline: none;
+}
+.footer .button {
+  color: #212121;
+  padding: 20px 70px;
+  border-radius: 10px;
+  border: none;
+  transition: 0.3s
+}
+.button:hover {
+  color: #ffffff;
+  padding: 20px 70px;
+}
+
+.footer textarea {
+  resize: none;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+.rules{
+  padding: 20px;
+  font-family: 'Roboto';
+  font-size: 20px;
+  text-align: center;
+}
